# pjepa

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  INTERFACES.md  LICENSE  Makefile  README.md  SECURITY.md  cleanup.sh  conftest.py  mkdocs.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
configs/: baseline_ewc.yaml  baseline_gcn.yaml  baseline_gem.yaml  baseline_gin.yaml  baseline_graphcl.yaml  baseline_graphmae.yaml  baseline_infograph.yaml  baseline_naive.yaml  cl.yaml  default.yaml  ogb.yaml  tu.yaml
docs/: changelog.md  getting-started.md  index.md
docs/developer/: 01_quickstart.md  02_architecture.md  03_adding_an_encoder.md  04_adding_a_baseline.md  05_reproducing_paper_results.md  06_test_taxonomy.md
docs/paper/: dynamics.md  encoders.md  free-energy.md  graphs.md  retrieval.md  verified-rewriting.md
docs/reference/: api.md  cli.md  config.md
docs/researcher/: 01_persistent_graph_world_model.md
experiments/: EXP_A.md  EXP_B.md  EXP_C.md  PROTOCOL.md  PROTOCOL_CL.md  REPRODUCE.md  __init__.py  run_exp_a_retrieval.py  run_exp_b_distortion.py  run_exp_c_encoder_ablation.py  run_exp_d_tu_sota.py  run_exp_e_continual.py  run_exp_f_ogb_arxiv.py  run_exp_g_decoupling.py  run_exp_h_ablations.py  run_optuna_search.py  run_sensitivity.py
src/pjepa/: __init__.py  compat.py  config.py  exceptions.py  hardware.py  logging_setup.py  py.typed  version.py
src/pjepa/augmentations/: __init__.py  base.py  feature.py  identity.py  registry.py  structural.py  tensor.py
src/pjepa/baselines/: __init__.py  bgrl.py  ewc.py  gcn.py  gem.py  gin.py  graphcl.py  graphmae.py  graphsage.py  infograph.py  naive.py  packnet.py
src/pjepa/cli/: __init__.py  app.py
src/pjepa/data/: __init__.py  cl_splits.py  ogb.py  tu.py
src/pjepa/dynamics/: __init__.py
src/pjepa/encoders/: __init__.py  base.py  dual_geometric.py  euclidean_mpnn.py  hyperbolic.py  jepa_predictor.py  registry.py
src/pjepa/eval/: __init__.py  aggregate.py  bootstrap.py  metrics.py  plots.py  stats.py  style.py
src/pjepa/graphs/: __init__.py  persistent_state.py  typed_graph.py  working_graph.py
src/pjepa/objectives/: __init__.py  free_energy.py  ib_lagrangian.py  mdl.py
src/pjepa/perf/: __init__.py  autocast.py  benchmark.py  cache.py  compile.py  ema.py  scatter.py  sharding.py  sync.py
src/pjepa/retrieval/: __init__.py  greedy.py  utility.py
src/pjepa/rewriting/: __init__.py  bisimulation.py  dpo.py  four_conditions.py  hrg.py
src/pjepa/scheduler/: __init__.py  buffer.py  cadence.py  ppo.py
src/pjepa/training/: __init__.py  checkpoint.py  distillation.py  ensemble.py  eval.py  optuna_search.py  swa.py  (+3 more)
tests/: __init__.py  test_aggregate.py  test_aug_data_baselines.py  test_augmentations_registry.py  test_cli.py  test_compat.py  test_config.py  test_configs.py  test_encoders_registry.py  test_exceptions.py  test_exp_phase4.py  test_experiments.py  test_graphs.py  test_hardware.py  test_logging_setup.py  test_objectives_dynamics_scheduler_encoders.py  test_optuna.py  test_perf.py  test_perf_extras.py  test_phase10_ogb.py  test_phase11_experiments.py  test_phase9_continual.py  test_pretrain_optuna_plots.py  test_retrieval.py  test_rewriting.py  test_seeding.py  test_training_and_eval.py  test_training_wrappers.py  test_tu_sota_aggregation.py  test_version_and_py_typed.py
(+2 files in other folders)
