[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pjepa"
version = "0.0.1"
description = "Persistent-JEPA: a persistent graph world model for continual developmental learning."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sachin", email = "sachncs@gmail.com"},
]
requires-python = ">=3.10,<3.15"
keywords = [
    "graph-neural-networks",
    "continual-learning",
    "jepa",
    "world-model",
    "self-supervised-learning",
    "developmental-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.13.0",
    "torch_geometric>=2.8.0",
    "geoopt>=0.5.1",
    "numpy>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.5",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "pandas>=2.2",
    "tqdm>=4.66",
    "typer>=0.12",
    "hypothesis>=6.100",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.6",
    "pytype>=2024.10",
    "mutmut>=2.4",
    "cosmic-ray>=10.0",
    "pip-audit>=2.7",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
ogb = [
    "ogb>=1.3",
]

[project.scripts]
pjepa = "pjepa.cli:main"

[project.urls]
"Paper" = "https://github.com/sachncs/persistent-jepa"
"Source" = "https://github.com/sachncs/persistent-jepa"
"Issues" = "https://github.com/sachncs/persistent-jepa/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pjepa" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["docs/", "plans/"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
    "G",
    "PIE",
    "PT",
    "RET",
    "SLF",
    "D",
]
ignore = [
    "D203",
    "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "PT004", "B017", "B905", "PT011"]
"__init__.py" = ["F401"]
"src/pjepa/**/*.py" = ["B905", "D107", "D105", "D104", "RUF002", "RUF005", "SIM102", "SIM108", "UP042"]
"tests/test_*.py" = ["PT018", "RUF059", "SIM108", "RUF002"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --tb=short"
testpaths = ["tests"]
markers = [
    "mps_sequential: tests that require exclusive MPS access",
    "slow: tests that take more than a second",
]
filterwarnings = [
    "ignore::DeprecationWarning:torch.jit",
    "ignore::UserWarning:torch_geometric",
]

[tool.coverage.run]
branch = true
source = ["src/pjepa"]
omit = [
    "src/pjepa/_version.py",
    "src/pjepa/cli/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 1

[tool.pytype]
inputs = ["src/pjepa"]
python_version = "3.12"
strict = ["src/pjepa"]
exclude = ["**/_version.py"]